--- a/app/src/main/res/layout/fragment_events_list.xml
+++ b/app/src/main/res/layout/fragment_events_list.xml
@@ -14,6 +14,8 @@
         android:id="@android:id/empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center" />
+        android:text="@string/empty_events_list"
+        android:gravity="center"
+        android:visibility="invisible"/>
 
 </FrameLayout>
