--- a/app/src/main/res/layout/events_list_item.xml
+++ b/app/src/main/res/layout/events_list_item.xml
@@ -25,6 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/event_name"
+            android:text="@string/placeholder_events_item_name"
             style="@style/events_item_text_big"/>
 
         <View style="@style/event_divider"/>
@@ -39,10 +40,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/events_item_text"
-                android:text="00:00"
+                android:text="@string/placeholder_events_item_time"
                 android:gravity="left"
                 android:layout_weight="1"
-
                 android:id="@+id/time" />
             <TextView
                 android:layout_width="wrap_content"
@@ -51,7 +51,7 @@
                 android:gravity="center_horizontal"
                 android:layout_weight="1"
 
-                android:text="X km"
+                android:text="@string/placeholder_events_item_distance"
                 android:id="@+id/distance" />
             <TextView
                 android:layout_width="wrap_content"
@@ -61,7 +61,7 @@
                 android:layout_weight="1"
 
 
-                android:text="0"
+                android:text="@string/placeholder_events_item_attendees"
                 android:id="@+id/attendees" />
             </LinearLayout>
 
