Moved menu from EventsActivity to EventsFragment

--- a/app/src/main/res/menu/events.xml
+++ b/app/src/main/res/menu/events.xml
@@ -1,8 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".EventsActivity" >
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
+    <item android:id="@+id/create_event"
+        android:title="@string/create_event"
         android:orderInCategory="100"
         android:showAsAction="never" />
 </menu>
