--- a/app/src/main/res/layout/fragment_create_new_event.xml
+++ b/app/src/main/res/layout/fragment_create_new_event.xml
@@ -27,7 +27,7 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/editText"
+            android:id="@+id/event_name_input"
             android:inputType="text"
             android:imeOptions="actionDone"
             android:layout_alignParentLeft="true"
@@ -36,8 +36,8 @@
         <DatePicker
             android:layout_width="match_parent"
             android:layout_height="197dp"
-            android:id="@+id/datePicker2"
-            android:layout_below="@+id/timePicker"
+            android:id="@+id/event_date"
+            android:inputType="date"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
