--- a/app/src/main/res/layout/fragment_events_list.xml
+++ b/app/src/main/res/layout/fragment_events_list.xml
@@ -11,11 +11,12 @@
         android:layout_height="match_parent" />
 
     <TextView
-        android:id="@android:id/empty"
+        android:id="@+id/empty_events"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/empty_events_list"
         android:gravity="center"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        android:textSize="22dp"/>
 
 </FrameLayout>
