--- a/app/src/main/res/layout/events_list_item.xml
+++ b/app/src/main/res/layout/events_list_item.xml
@@ -2,67 +2,105 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="180dp"
-    android:orientation="vertical"
-    android:gravity="bottom"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <!-- A CardView that contains a TextView -->
 
-    android:background="@android:color/holo_blue_dark"
-    android:weightSum="1">
-
-    <LinearLayout
-        android:orientation="vertical"
+    <android.support.v7.widget.CardView
+        xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/event_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-
-        android:background="@color/transparent_background"
-        android:layout_weight="0.25">
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/event_name"
-            android:text="@string/placeholder_events_item_name"
-            style="@style/events_item_text_big"/>
+        card_view:cardCornerRadius="2dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical" >
 
-
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/events_item_text"
-                android:text="@string/placeholder_events_item_time"
-                android:gravity="left"
-                android:layout_weight="1"
-                android:id="@+id/time" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/events_item_text"
-                android:gravity="center_horizontal"
-                android:layout_weight="1"
+                android:orientation="vertical"
+                android:padding="16dp">
 
-                android:text="@string/placeholder_events_item_distance"
-                android:id="@+id/distance" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="@style/events_item_text"
-                android:gravity="right"
-                android:layout_weight="1"
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/event_time"
+                        android:text="@string/placeholder_events_item_time"
+                        android:layout_gravity="right"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true"
+                        android:textSize="@dimen/body2"
+                        android:textIsSelectable="false"
+                        android:textColor="@color/body_grey" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/event_place"
+                        android:text="@string/placeholder_events_item_location"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:textColor="@color/body_grey"
+                        android:textSize="@dimen/body2" />
+                </RelativeLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/event_name"
+                    android:text="@string/placeholder_events_item_name"
+                    android:textColor="@color/body_dark"
+                    android:textSize="@dimen/title"
+                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />
 
 
-                android:text="@string/placeholder_events_item_attendees"
-                android:id="@+id/attendees" />
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/divider_grey"/>
 
-    </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="8dp"
+                android:paddingBottom="8dp">
+
+
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+
+                    android:text="@string/placeholder_events_item_attendees"
+                    android:id="@+id/attendees"
+                    android:textColor="@color/body_dark"
+                    android:textSize="@dimen/body2" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+
+    </android.support.v7.widget.CardView>
+
 </LinearLayout>
