--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,10 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="keyline_16">16dp</dimen>
+
+    <dimen name="title">20sp</dimen>
+    <dimen name="body2">14sp</dimen>
+
 </resources>
