--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,5 +8,10 @@
     <dimen name="title">20sp</dimen>
     <dimen name="body2">14sp</dimen>
 
+    <dimen name="headerbar_elevation">4dp</dimen>
 
+    <dimen name="keyline_1">16dp</dimen>
+    <dimen name="keyline_1_minus_8dp">8dp</dimen>
+    <dimen name="keyline_2">72dp</dimen>
+    <dimen name="keyline_2_minus_16dp">56dp</dimen>
 </resources>
