search button (not working)

--- a/app/src/main/res/menu/events.xml
+++ b/app/src/main/res/menu/events.xml
@@ -1,9 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".EventsActivity" >
-    <item android:id="@+id/create_event"
-        android:title="@string/create_event"
-        android:orderInCategory="100"
-        android:showAsAction="never" />
+    <item android:id="@+id/action_search"
+        android:icon="@drawable/ic_search"
+        android:title="@string/action_search"
+        android:showAsAction="ifRoom" />
 
 </menu>
