--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,11 @@
 
     <color name="divider_grey">#1f000000</color>
 
+    <!-- Text colors -->
+    <color name="black_87">#DB000000</color>
+
+    <!-- Edit text fields -->
+    <color name="edit_hint">#1A000000</color>
+
 
 </resources>
