Added categories + Polished
Used model for event information

--- a/app/src/main/res/layout/events_list_item.xml
+++ b/app/src/main/res/layout/events_list_item.xml
@@ -85,17 +85,31 @@
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp">
 
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
 
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                        android:text="@string/placeholder_events_item_attendees"
+                        android:id="@+id/attendees"
+                        android:textColor="@color/body_dark"
+                        android:textSize="@dimen/body2"
+                        android:layout_centerVertical="true" />
+                    <ImageView
+                        android:id="@+id/event_cat"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_other"
+                        android:layout_alignParentTop="false"
+                        android:layout_alignParentRight="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true" />
 
+                </RelativeLayout>
 
-                    android:text="@string/placeholder_events_item_attendees"
-                    android:id="@+id/attendees"
-                    android:textColor="@color/body_dark"
-                    android:textSize="@dimen/body2" />
 
             </LinearLayout>
 
