--- a/app/src/main/res/layout/activity_view_event.xml
+++ b/app/src/main/res/layout/activity_view_event.xml
@@ -1,157 +1,218 @@
-<com.bdlabs_linku.linku.ObservableScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
-    android:id="@+id/scroll_view"
+<FrameLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:overScrollMode="never"
-    android:fillViewport="true"
-    android:background="#fff"    >
-
-    <FrameLayout
-        android:id="@+id/scroll_view_child"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:fab="http://schemas.android.com/apk/res-auto">
+    <com.bdlabs_linku.linku.ObservableScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
+        xmlns:fab="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipChildren="false">
+        android:layout_height="match_parent"
+        android:overScrollMode="never"
+        android:fillViewport="true"
+        android:background="#fff">
 
-        <!-- Background photo -->
-        <FrameLayout android:id="@+id/session_photo_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageView
-                android:id="@+id/session_photo"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:scaleType="centerCrop" />
-        </FrameLayout>
-
-
-        <LinearLayout
+        <FrameLayout
+            android:id="@+id/scroll_view_child"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/details_container"
-            android:background="#fff"
-            android:paddingTop="16dp"
-            android:clipToPadding="false">
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/description"
-                android:text="Lorem Ipsu Lorem IpsuLorem IpsuLorem IpsuLorem IpsuLorem IpsuLorem Ipsu "
-                android:layout_marginLeft="@dimen/keyline_1"
-                android:layout_marginRight="@dimen/keyline_1"
-                android:textSize="14sp"
-                android:textColor="@color/body_dark"
-                android:layout_marginBottom="24dp" />
+            android:clipChildren="false">
 
-            <View
+            <!-- Background photo -->
+            <FrameLayout android:id="@+id/session_photo_container"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/divider_grey"/>
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:text="@string/placeholder_events_item_attendees"
-                android:id="@+id/session_speakers"
-                android:layout_marginLeft="@dimen/keyline_2"
-                android:layout_marginRight="@dimen/keyline_1"
-                android:layout_gravity="center_vertical"
-                android:gravity="center_vertical" />
+                <ImageView
+                    android:id="@+id/session_photo"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop" />
+            </FrameLayout>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/location_map"
-                android:scaleType="centerCrop"
-                android:background="@color/primary_dark" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:background="@color/primary"
-                android:padding="@dimen/keyline_1"
-                android:elevation="4dp">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/location_name"
-                    android:text="Location Name"
-                    android:textColor="@android:color/white"
-                    android:textSize="20sp" />
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:id="@+id/location_address"
-                    android:text="Location Address"
-                    android:textColor="@android:color/white"
-                    android:textSize="14sp"
-                    android:textStyle="italic" />
-                </LinearLayout>
-
-
-        </LinearLayout>
-
-        <!-- Title/subtitle bar (floating; position determined at run time as the content view scrolls) -->
-        <LinearLayout
-            android:id="@+id/header_session"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clipChildren="false"
-            android:clipToPadding="false"
-            android:orientation="vertical"
-            android:paddingBottom="16dp">
-
-            <include layout="@layout/toolbar_actionbar" />
-
-            <!-- Session title -->
-            <TextView android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:layout_marginBottom="0dp"
-                android:text="@string/placeholder_events_item_name"
-                android:id="@+id/session_title"
-                android:maxLines="4"
-                android:ellipsize="end"
-                android:lineSpacingMultiplier="1.1"
-                android:textAlignment="viewStart"
-                android:layout_gravity="start"
-                android:layout_marginLeft="@dimen/keyline_2"
-                android:layout_marginRight="@dimen/keyline_1"
-                android:textColor="#fff"
-                android:textIsSelectable="false"
-                android:textSize="20sp" />
-
-            <!-- Session subtitle -->
-            <!--<RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">-->
-
+                android:id="@+id/details_container"
+                android:background="#fff"
+                android:paddingTop="16dp"
+                android:clipToPadding="false">
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/session_subtitle"
-                    android:text="@string/placeholder_events_item_time"
+                    android:id="@+id/description"
+                    android:text="Lorem"
+                    android:layout_marginLeft="@dimen/keyline_1"
+                    android:layout_marginRight="@dimen/keyline_1"
+                    android:textSize="14sp"
+                    android:textColor="@color/body_dark"
+                    android:layout_marginBottom="24dp" />
 
-                    android:textColor="@android:color/white"
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/divider_grey"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:text="@string/placeholder_events_item_attendees"
                     android:layout_marginLeft="@dimen/keyline_2"
                     android:layout_marginRight="@dimen/keyline_1"
-                    android:textSize="14sp" />
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical" />
 
-                <!--<TextView
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Jane Doe"
+                    android:layout_marginLeft="@dimen/keyline_2"
+                    android:layout_marginRight="@dimen/keyline_1"
+                    android:textSize="12sp"
+                    android:textColor="@color/body_dark"
+                    android:layout_marginBottom="24dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="John Doe"
+                    android:layout_marginLeft="@dimen/keyline_2"
+                    android:layout_marginRight="@dimen/keyline_1"
+                    android:textSize="12sp"
+                    android:textColor="@color/body_dark"
+                    android:layout_marginBottom="24dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Leo White"
+                    android:layout_marginLeft="@dimen/keyline_2"
+                    android:layout_marginRight="@dimen/keyline_1"
+                    android:textSize="12sp"
+                    android:textColor="@color/body_dark"
+                    android:layout_marginBottom="24dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="INVITE A FRIEND"
+                    android:layout_marginLeft="@dimen/keyline_2"
+                    android:layout_marginRight="@dimen/keyline_1"
+                    android:textSize="14sp"
+                    android:textColor="@color/accent"
+                    android:layout_marginBottom="16dp"
+                    android:textStyle="bold"
+                    android:textAlignment="gravity"
+                    android:gravity="right|end" />
+
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/event_place"
-                    android:text="@string/placeholder_events_item_location"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:textColor="@color/body_grey"
-                    android:textSize="@dimen/body2" />-->
-            <!--</RelativeLayout>-->
-        </LinearLayout>
+                    android:id="@+id/location_map"
+                    android:scaleType="centerCrop"
+                    android:background="@color/primary_dark" />
 
-    </FrameLayout>
-</com.bdlabs_linku.linku.ObservableScrollView>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:background="@color/primary"
+                    android:padding="@dimen/keyline_1"
+                    android:elevation="4dp">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/location_name"
+                        android:text="Location Name"
+                        android:textColor="@android:color/white"
+                        android:textSize="20sp" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:id="@+id/location_address"
+                        android:text="Location Address"
+                        android:textColor="@android:color/white"
+                        android:textSize="14sp"
+                        android:textStyle="italic" />
+                    </LinearLayout>
+
+
+            </LinearLayout>
+
+            <!-- Title/subtitle bar (floating; position determined at run time as the content view scrolls) -->
+            <LinearLayout
+                android:id="@+id/header_session"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipChildren="false"
+                android:clipToPadding="false"
+                android:orientation="vertical"
+                android:paddingBottom="16dp">
+
+                <include layout="@layout/toolbar_actionbar" />
+
+                <!-- Session title -->
+                <TextView android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_marginBottom="0dp"
+                    android:text="@string/placeholder_events_item_name"
+                    android:id="@+id/session_title"
+                    android:maxLines="4"
+                    android:ellipsize="end"
+                    android:lineSpacingMultiplier="1.1"
+                    android:textAlignment="viewStart"
+                    android:layout_gravity="start"
+                    android:layout_marginLeft="@dimen/keyline_2"
+                    android:layout_marginRight="@dimen/keyline_1"
+                    android:textColor="#fff"
+                    android:textIsSelectable="false"
+                    android:textSize="20sp" />
+
+                <!-- Session subtitle -->
+                <!--<RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">-->
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/session_subtitle"
+                        android:text="@string/placeholder_events_item_time"
+
+                        android:textColor="@android:color/white"
+                        android:layout_marginLeft="@dimen/keyline_2"
+                        android:layout_marginRight="@dimen/keyline_1"
+                        android:textSize="14sp" />
+
+                    <!--<TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/event_place"
+                        android:text="@string/placeholder_events_item_location"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentLeft="true"
+                        android:layout_alignParentStart="true"
+                        android:textColor="@color/body_grey"
+                        android:textSize="@dimen/body2" />-->
+                <!--</RelativeLayout>-->
+            </LinearLayout>
+
+
+        </FrameLayout>
+    </com.bdlabs_linku.linku.ObservableScrollView>
+
+    <com.getbase.floatingactionbutton.FloatingActionButton
+    android:id="@+id/join_event_btn"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    fab:fab_icon="@drawable/ic_plus"
+    fab:fab_colorNormal="@color/accent"
+    fab:fab_colorPressed="@color/accent_darker"
+    android:layout_alignParentBottom="true"
+    android:layout_centerHorizontal="true"
+    android:layout_marginBottom="16dp"
+    android:layout_gravity="right|bottom" />
+</FrameLayout>
