Added a category picker to event creation

--- a/app/src/main/res/layout/fragment_create_new_event.xml
+++ b/app/src/main/res/layout/fragment_create_new_event.xml
@@ -170,6 +170,27 @@
             </LinearLayout>
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_marginLeft="@dimen/add_event_edit_horizontal_margin"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/category"
+                android:prompt="@string/placeholder_category"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"/>
+
+            <View
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:background="@color/divider_grey"
+                android:layout_marginBottom="@dimen/vertical_8_margin" />
+        </LinearLayout>
+
     </LinearLayout>
 
 </ScrollView>
