Login/Signup style overhaul + Logout button
Moved login to welcome, styled welcome and signing, added logout button
and basic error checking for login/signup

--- a/app/src/main/res/menu/events.xml
+++ b/app/src/main/res/menu/events.xml
@@ -5,4 +5,8 @@
         android:title="@string/action_search"
         app:showAsAction="always" />
 
+    <item android:id="@+id/action_logout"
+        android:title="@string/action_logout"
+        app:showAsAction="never" />
+
 </menu>
