Dist and time in view event

--- a/app/src/main/res/layout/activity_view_event.xml
+++ b/app/src/main/res/layout/activity_view_event.xml
@@ -63,40 +63,23 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
+                    android:text="@string/placeholder_events_item_attendees"
                     android:layout_marginLeft="@dimen/keyline_2"
                     android:layout_marginRight="@dimen/keyline_1"
                     android:layout_gravity="center_vertical"
                     android:gravity="center_vertical" />
 
-                <TextView
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:text="Jane Doe"
                     android:layout_marginLeft="@dimen/keyline_2"
                     android:layout_marginRight="@dimen/keyline_1"
-                    android:textSize="12sp"
-                    android:textColor="@color/body_dark"
-                    android:layout_marginBottom="24dp" />
+                    android:layout_marginBottom="24dp"
+                    android:id="@+id/attendees">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="John Doe"
-                    android:layout_marginLeft="@dimen/keyline_2"
-                    android:layout_marginRight="@dimen/keyline_1"
-                    android:textSize="12sp"
-                    android:textColor="@color/body_dark"
-                    android:layout_marginBottom="24dp" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Leo White"
-                    android:layout_marginLeft="@dimen/keyline_2"
-                    android:layout_marginRight="@dimen/keyline_1"
-                    android:textSize="12sp"
-                    android:textColor="@color/body_dark"
-                    android:layout_marginBottom="24dp" />
+                </LinearLayout>
 
                 <RelativeLayout
                     android:layout_width="fill_parent"
@@ -164,7 +147,8 @@
                 android:layout_height="wrap_content"
                 android:minHeight="?android:actionBarSize"
                 android:gravity="center_vertical"
-                android:paddingBottom="8dp">
+                android:paddingBottom="8dp"
+                android:background="#ffff2d45">
 
                 <!-- Session title -->
                 <TextView android:layout_height="wrap_content"
@@ -178,33 +162,35 @@
                     android:textIsSelectable="false"
                     android:textSize="20sp"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginTop="8dp" />
+                    android:layout_marginTop="8dp"
+                    android:text="skh" />
 
                 <!-- Session subtitle -->
-                <!--<RelativeLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">-->
+                    android:layout_height="wrap_content"
+                    android:id="@+id/session_subtitle" >
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/session_subtitle"
+                        android:id="@+id/event_time"
                         android:textColor="@android:color/white"
                         android:layout_marginLeft="@dimen/keyline_2"
                         android:layout_marginRight="@dimen/keyline_1"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"
+                        android:text="fff" />
 
-                    <!--<TextView
+                    <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/event_place"
-                        android:text="@string/placeholder_events_item_location"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:textColor="@color/body_grey"
-                        android:textSize="@dimen/body2" />-->
-                <!--</RelativeLayout>-->
+                        android:layout_alignParentRight="true"
+                        android:textSize="14sp"
+                        android:textColor="@android:color/white"
+                        android:layout_marginRight="@dimen/keyline_1"
+                        android:text="ffff" />
+                </RelativeLayout>
             </LinearLayout>
 
 
